added minor content

--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mitchel Staal | Homepage</title>
+	<link rel="stylesheet" href="/assets/css/styles.css">
+	<link rel="icon" href="">
 </head>
+
 <body>
-	
+	<header>
+		<nav>
+			<ul class="nav-links">
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Projects</a></li>
+				<li><a href="#">Contactkl</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<main>
+		<section>
+			<p>Hello, I'm a Developer Student based in Amsterdam!</p> 
+		</section>
+		<section>
+			<h1>Mitchel Staal</h1>
+			<p>Full-stack Developer</p>
+		</section>
+	</main>
+
+	<footer>
+		<div class="socials">
+
+		</div>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Works</a></li>
+			<li><a href="#">About</a></li>
+		</ul>
+		<p>© 2022 SecretMenu</p>
+	</footer>
 </body>
+
 </html>
