added text content

--- a/index.html
+++ b/index.html
@@ -30,6 +30,25 @@
 			<h1>Mitchel Staal</h1>
 			<p>Full-stack Developer</p>
 		</section>
+		<section>
+			<h2>About me</h2>
+			<p>Mitchel is a Communication Multi Media Design student at the Amsterdam University of Applied Sciences.</p>
+			<button><a href="#">My projects</a></button>
+
+			<h3>Skills</h3>
+			<p>Html, CSS, JavaScript</p>
+		</section>
+
+		<section>
+			<h2>Projects</h2>
+		</section>
+
+		<section>
+			<h2>Socials</h2>
+			<ul>
+				<li><a href="#">Instagram</a></li>
+			</ul>
+		</section>
 	</main>
 
 	<footer>
