added copyright footer

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<li><a href="#">Works</a></li>
 			<li><a href="#">About</a></li>
 		</ul>
-		<p>© 2022 SecretMenu</p>
+		<p>© 2022 Mitchel Staal. All rights reserved</p>
 	</footer>
 </body>
 
