fixed links and images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mitchel Staal | Homepage</title>
 	<link rel="stylesheet" href="/assets/css/styles.css">
-	<link rel="icon" href="">
+	<link rel="icon" href="/assets/images/icons/Personal_logo.png">
 </head>
 
 <body>
@@ -15,11 +15,13 @@
 		<nav class="navbar">
 			<div class="navbar-main">
 				<div class="logo">
-					<a href="#"><h1>Mitchel Staal</h1></a>
+					<a href="#">
+						<h1>Mitchel Staal</h1>
+					</a>
 				</div>
 				<div class="navbar-links">
 					<ul>
-						<li><a href="#banner">Home</a></li>
+						<li><a href="#">Home</a></li>
 						<li><a href="#about">About</a></li>
 						<li><a href="#projects">Projects</a></li>
 						<li><a href="#contact">Contact</a></li>
@@ -34,22 +36,23 @@
 
 	<main>
 		<section class="banner" id="banner">
-			<img src="/assets/images/projects/project_fetchfirst.png" alt="Banner image">
+			<img src="/assets/images/banner.png" alt="Banner image">
 		</section>
 
 		<section class="introduction" id="about">
-			<p>Hello, I'm a Developer Student based in Amsterdam!</p> 
+			<p>Hello, I'm a Developer Student based in Amsterdam!</p>
 		</section>
 		<section class="title">
 			<div class="title-information">
 				<h1>Mitchel Staal</h1>
 				<p>Developer (Front-end, Back-end, UX/UI designer)</p>
 			</div>
-			<img src="/assets/images/me.jpg" alt="profile image">
+			<img src="/assets/images/profile.png" alt="profile image">
 		</section>
 		<section class="about">
 			<h2>About me</h2>
-			<p>Hi, my name is Mitchel. Currently a Communication Multi Media Design student at the Amsterdam University of Applied Sciences. Trying to become a better all-around developer. </p>
+			<p>Hi, my name is Mitchel. Currently a Communication Multi Media Design student at the Amsterdam University
+				of Applied Sciences. Trying to become a better all-around developer. </p>
 			<button><a href="#">My projects</a></button>
 
 			<h3>Skills</h3>
@@ -62,23 +65,23 @@
 				<div class="project">
 					<img src="/assets/images/projects/project_fetchfirst.png" alt="Project fetch first">
 					<h4>Fetch first</h4>
-					<p>A tool to help you find schools based on your interests.</p>
+					<p>A matching application that helps students find their dream school based on their interests.</p>
 				</div>
 				<div class="project">
 					<img src="/assets/images/projects/project_fetchfirst.png" alt="Project fetch first">
-					<h4>Fetch first</h4>
-					<p>A tool to help you find schools based on your interests.</p>
+					<h4>Project title</h4>
+					<p>Project description</p>
 				</div>
 			</div>
-			
+
 		</section>
 
 		<section class="socials" id="contact">
 			<h2>Socials</h2>
 			<ul>
-				<li><a href="#">Linkedin</a></li>
-				<li><a href="#">Github</a></li>
-				<li><a href="#">Instagram</a></li>
+				<li><a href="https://www.linkedin.com/in/mitchelstaal/">Linkedin</a></li>
+				<li><a href="https://github.com/Mitchel-DS">Github</a></li>
+				<li><a href="https://www.instagram.com/md.yami/">Instagram</a></li>
 			</ul>
 		</section>
 	</main>
@@ -89,9 +92,9 @@
 		</div>
 		<ul class="nav">
 			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Projects</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="#about">About</a></li>
+			<li><a href="#projects">Projects</a></li>
+			<li><a href="#contact">Contact</a></li>
 		</ul>
 		<p>© 2022 Mitchel Staal. All rights reserved</p>
 	</footer>
