added header logo

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<div class="navbar-main">
 				<div class="logo">
 					<a href="#">
+						<img src="/assets/images/icons/Personal_logo_transparent.png" alt="">
 						<h1>Mitchel Staal</h1>
 					</a>
 				</div>
