--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 				</div>
 			</div>
 			<div class="toggle">
-				<button class="theme">test</button>
+				<button class="theme">Toggle</button>
 			</div>
 		</nav>
 	</header>
 
 	<main>
 		<section class="banner" id="banner">
-			<img src="/assets/images/banner.png" alt="Banner image">
+			<img src="" alt="banner image">
 		</section>
 
 		<section class="introduction" id="about">
@@ -52,8 +52,12 @@
 		</section>
 		<section class="about">
 			<h2>About me</h2>
-			<p>Hi, my name is Mitchel. Currently a Communication Multi Media Design student at the Amsterdam University
-				of Applied Sciences. Trying to become a better all-around developer. </p>
+			<p>Hi, my name is Mitchel. Currently a Communication Multi-Media Design student at the Amsterdam University
+				of Applied Sciences. Trying to become a better all-around developer. </p><br>
+
+				<p>In my free time I spend most of my time hanging out with friends; going out, playing video games, etc. If you wanna add me on any of my gaming links, check them out <a href="#">here.</a> I'll try to add back when I can. </p>
+			
+			
 			<button><a href="#">My projects</a></button>
 
 			<h3>Skills</h3>
@@ -64,12 +68,12 @@
 			<h2>Projects</h2>
 			<div class="project-container">
 				<div class="project">
-					<img src="/assets/images/projects/project_fetchfirst.png" alt="Project fetch first">
+					<a href="#"><img src="/assets/images/projects/project_fetchfirst.png" alt="Project fetch first"></a>
 					<h4>Fetch first</h4>
 					<p>A matching application that helps students find their dream school based on their interests.</p>
 				</div>
 				<div class="project">
-					<img src="/assets/images/projects/project_fetchfirst.png" alt="Project fetch first">
+					<a href="#"><img src="" alt="project image"></a>
 					<h4>Project title</h4>
 					<p>Project description</p>
 				</div>
